[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dfrobot-sen0395"
authors = [{name = "Stan Svec", email = "dev@stansvec.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "pyserial>=3.5",
    "paho-mqtt>=1.6.1",
]

[tool.flit.module]
name = "dfrmmwave"

pythonpath = "src"

[project.urls]
Home = "https://github.com/StanSvec/dfrobot-sen0395"
